| Summary: | ASTERISK-25914: PJSIP: failed registration with wrong codec name on allow/disallow | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2016-04-11 16:19:37 | Date Closed: | 2016-09-23 14:20:13 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Codecs/General Resources/res_pjsip Resources/res_realtime |
| Versions: | 13.8.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) pjsip_failed_reg_on_bad_codec.txt | |
| Description: | PJSIP/Realtime.
Failed registration if one of the codec name in allow/disallow option is wrong or contains space. 1. Need to strip codec name 2. Need to ignore wrong codec | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-04-11 16:19:38.247-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-04-11 20:34:49.369-0500 Hmm, I think ideally here you want to force the user to fix the invalid configuration rather than ignore the issue and continue to use improperly formatted configuration while only using part of the entry. I'll wait for developers to review your patches. | ||